--- a/praktikuojames.html
+++ b/praktikuojames.html
@@ -8,16 +8,14 @@
 </head>
 <body>
     <h1>Praktikuojamės</h1>
-    <table>
-        <tr>
-            <td><a href="pirma.uzduotis.html">Pirma užduotis</a></td>
-            <td><a href="antra.uzuotis.html">Antra užduotis</a></td>
-            <td><a href="trecia.uzduotis.html">Trečia užduotis</a></td>
-            <td><a href="ketvirta.uzduotis.html">Ketvirta užduotis</a></td>
-            <td><a href="penkta.uzduotis.html">Penkta užduotis</a></td>
-            <td><a href="sesta.uzduotis.html">Šešta užduotis</a></td>
-        </tr>
-    </table>
+    <nav>
+        <h3><a href="pirmauzduotis.html">Pirma užduotis</a>
+        <a href="antrauzuotis.html">Antra užduotis</a>
+        <a href="treciauzduotis.html">Trečia užduotis</a>
+        <a href="ketvirtauzduotis.html">Ketvirta užduotis</a>
+        <a href="penktauzduotis.html">Penkta užduotis</a>
+        <a href="sestauzduotis.html">Šešta užduotis</a></h3>
+    </nav>
     <h3>Mano asmeniniai darbai</h3>
         <h4>Įvairios HTML praktinės užduotys, kurios reikalingos Front end programavimo pagrindams </h4>
     </body>
