--- a/ketvirtauzduotis.html
+++ b/ketvirtauzduotis.html
@@ -7,6 +7,46 @@
     <title>Ketvirta užduotis</title>
 </head>
 <body>
-    
+    <h1>Praktikuojamės</h1>
+    <nav>
+        <h3><a href="pirmauzduotis.html">Pirma užduotis</a>
+        <a href="antrauzuotis.html">Antra užduotis</a>
+        <a href="treciauzduotis.html">Trečia užduotis</a>
+        <a href="ketvirtauzduotis.html">Ketvirta užduotis</a>
+        <a href="penktauzduotis.html">Penkta užduotis</a>
+        <a href="sestauzduotis.html">Šešta užduotis</a></h3>
+   </nav>
+   <h1>Ketvirta užduotis</h1>
+   <h2>Sąrašas sąraše</h2>
+   <ul>
+       <li>Daržovės</li>
+         <ol>
+             <li>Kopūstas</li>
+             <li>Kopūstas</li>
+             <li>Kopūstas</li>
+             <li>Kopūstas</li>
+             <li>Kopūstas</li>
+         </ol>
+        <li>Vaisiai</li>
+             <ul>
+              <li>Obuolys</li>
+                <ul><li>Alyvinis</li></ul>
+                <ol>
+                     <li>Prinokęs</li>
+                     <li>Neprinokęs</li>
+                   </ol>
+                <li>Obuolys</li>
+                <li>Obuolys</li>
+                <li>Obuolys</li>
+                <li>Obuolys</li>
+            </ul>
+         <li>Mėsos gaminiai</li>
+         <ol>
+             <li>Kumpis</li>
+             <li></li>
+         </ol>
+
+         </ul>
+   </ul>
 </body>
 </html>
