--- a/treciauzduotis.html
+++ b/treciauzduotis.html
@@ -7,6 +7,24 @@
     <title>Trečia užduotis</title>
 </head>
 <body>
-    
+    <h1>Praktikuojamės</h1>
+    <nav>
+        <h3><a href="pirmauzduotis.html">Pirma užduotis</a>
+        <a href="antrauzuotis.html">Antra užduotis</a>
+        <a href="treciauzduotis.html">Trečia užduotis</a>
+        <a href="ketvirtauzduotis.html">Ketvirta užduotis</a>
+        <a href="penktauzduotis.html">Penkta užduotis</a>
+        <a href="sestauzduotis.html">Šešta užduotis</a></h3>
+   </nav>
+   <h1>Trečioji užduotis</h1>
+   Parašyti <em>nenumeruotu</em> sąrašu <b>3 skaičius kvadratu ar n-tuoju laispniu</b> ir <b>chemines formules</b> 
+<ul>
+    <li><strong>5</strong><sup><strong>2</strong></sup></li>
+    <li><strong>2</strong><sup><strong>5</strong></sup></li>
+    <li><strong>n</strong><sup><strong>m</strong></sup></li>
+    <li><strong>H</strong><sub><strong>2</strong></sub><strong>O</strong></li>
+    <li><strong>CO</strong><sub><strong>2</strong></sub></li>
+</ul>
+<a href="praktikuojames.html"> &lt;Grįšti į pagrindinį</a>
 </body>
 </html>
