--- a/ketvirtauzduotis.html
+++ b/ketvirtauzduotis.html
@@ -41,10 +41,37 @@
                 <li>Obuolys</li>
             </ul>
          <li>Mėsos gaminiai</li>
-         <ol>
+         <ol type="A">
              <li>Kumpis</li>
-             <li></li>
+             <ul>
+                 <li>Šaltai rūkytas</li>
+                 <ul><li>Vytintas</li></ul>
+                 <li>Karštai rūkytas</li>
+                 <li>Virtas</li>
+             </ul>
+             <li>Kumpis</li>
+             <li>Kumpis</li>
+             <li>Kumpis</li>
+             <li>Kumpis</li>
          </ol>
+         <li>Desertai</li>
+         <ol type="I">
+             <li>Pyragai</li>
+             <ol type="a">
+                 <li>Obuolių pyragas</li>
+                <li>Sūrio pyragas</li>
+            </ol>
+            <li>Ledai</li>
+            <li>Šokoladai</li>
+         </ol>
+         <li>Formulės</li>
+         <ul>
+             <li><strong>5</strong><sup><strong>2</strong></sup></li>
+             <li><strong>2</strong><sup><strong>5</strong></sup></li>
+             <li><strong>n</strong><sup><strong>m</strong></sup></li>
+             <li><strong>H</strong><sub><strong>2</strong></sub><strong>O</strong></li>
+             <li><strong>CO</strong><sub><strong>2</strong></sub></li>
+         </ul>
 
          </ul>
 </body>
