--- a/antrauzuotis.html
+++ b/antrauzuotis.html
@@ -19,7 +19,7 @@
    <h1>Antroji užduotis</h1>
     <p>Sukurti <em>nenumeruotą</em> sąrašą su <strong>5 penkiomis naudingomis nuorodomis</strong></p>
     <p><em>Vietoje pavadinimo panaudoti logotipą ir uždėti title</em></p>
-    <p>Trys nuorodos atsidaro tame pačiame lange, dvi atsidaro kitame lange.</p>
+    <p><u>Trys</u> nuorodos atsidaro tame pačiame lange, <u>dvi</u> atsidaro kitame lange.</p>
    <ul>
      <li><a href="https://unsplash.com/"><img src="./atsisiųsti.png" alt="Free photos from Unsplash" title="Free photos from Unsplash" width="100px"></a></li>
      <li><a href="https://www.google.lt/"><img src="./atsisiųsti (1).png" alt="Google" title="Google" width="100px"></a></li>
