--- a/antrauzuotis.html
+++ b/antrauzuotis.html
@@ -24,7 +24,7 @@
      <li><a href="https://unsplash.com/"><img src="./atsisiųsti.png" alt="Free photos from Unsplash" title="Free photos from Unsplash" width="100px"></a></li>
      <li><a href="https://www.google.lt/"><img src="./atsisiųsti (1).png" alt="Google" title="Google" width="100px"></a></li>
      <li><a href="https://codepen.io/"><img src="./OIP.jpg" alt="Codepen" title="Codepen" width="100px"></a></li>
-     <li><a href="https://freefrontend.com/" target="blank"><img src="./atsisiųsti (3).png" alt="Free frontend" title="Free frontend" width="100px"></a></li>
+     <li><a href="https://freefrontend.com/" target="blank"><img src="./FreeFrontend.png" alt="Free frontend" title="Free frontend" width="100px"></a></li>
      <li><a href="https://css-tricks.com/guides/" target="blank"><img src="./8765.css-tricks_03149516.png-654x245.png" alt="Css-tricks" title="CSS Tricks" width="100px"></a></li>
    </ul>
     <a href="praktikuojames.html"> &lt;Grįšti į pagrindinį</a>
